arr/deployment-jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arr-jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: arr-jellyfin
  template:
    metadata:
      labels:
        app: arr-jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: home.bramble/compute-class
                operator: In
                values:
                - "raspberry-pi-5"
      containers:
      - name: arr-jellyfin
        image: lscr.io/linuxserver/jellyfin:latest
        ports:
        - containerPort: 8096
          protocol: TCP
          name: web
        volumeMounts:
        - name: arr-jellyfin-config-cache
          mountPath: /config
        - name: arr-media
          mountPath: /media
          readOnly: true
        resources:
          requests:
            memory: 768Mi
          limits:
            memory: 1536Mi
      volumes:
      - name: arr-media
        persistentVolumeClaim:
          claimName: arr-media
      - name: arr-jellyfin-config-cache
        persistentVolumeClaim:
          claimName: arr-jellyfin-config-cache
