arr/service-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: arr-jellyfin
spec:
  type: ClusterIP
  selector:
    app: arr-jellyfin
  ports:
  - protocol: TCP
    port: 8096
    targetPort: 8096
