arr/service-prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: arr-prowlarr
spec:
  type: ClusterIP
  selector:
    app: arr-prowlarr
  ports:
  - protocol: TCP
    port: 9696
    targetPort: 9696
