arr/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: arr-web
spec:
  type: ClusterIP
  selector:
    app: arr-web
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
