arr/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: arr
spec:
  gatewayClassName: traefik
  listeners:
  - name: websecure
    port: 9443
    protocol: HTTPS
    hostname: "arr.bennaylor.dev"
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: arr-tls
        namespace: arr
  - name: websecure-subdomains
    port: 9443
    protocol: HTTPS
    hostname: "*.arr.bennaylor.dev"
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: arr-tls
        namespace: arr
  - name: web
    port: 9080
    protocol: HTTP
    hostname: "arr.home"
  - name: web-subdomains
    port: 9080
    protocol: HTTP
    hostname: "*.arr.home"
