arr/httproute-local.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: arr-local
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: arr
  hostnames:
  - arr.home
  - transmission.arr.home
  - prowlarr.arr.home
  - jellyfin.arr.home
  rules:
  # Root Router
  - matches:
    - headers:
      - name: X-Forwarded-Host
        type: Exact
        value: arr.home
    backendRefs:
    - group: ""
      kind: Service
      name: arr-web
      namespace: arr
      port: 3000
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: local-only
  # Transmission
  - matches:
    - headers:
      - name: X-Forwarded-Host
        type: Exact
        value: transmission.arr.home
    backendRefs:
    - group: ""
      kind: Service
      name: arr-transmission
      namespace: arr
      port: 9091
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: local-only
  # Jellyfin
  - matches:
    - headers:
      - name: X-Forwarded-Host
        type: Exact
        value: jellyfin.arr.home
    backendRefs:
    - group: ""
      kind: Service
      name: arr-jellyfin
      namespace: arr
      port: 8096
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: local-only
  # Prowlarr
  - matches:
    - headers:
      - name: X-Forwarded-Host
        type: Exact
        value: prowlarr.arr.home
    backendRefs:
    - group: ""
      kind: Service
      name: arr-prowlarr
      namespace: arr
      port: 9696
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: local-only
